@@ -13,7 +13,7 @@
     <groupId>br.com.unesp</groupId>
     <artifactId>Thales-Hotel</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging> <!-- A tag packaging agora está aqui -->
+    <packaging>jar</packaging> <!-- A tag packaging agora está aqui -->
     <name>Thales-Hotel</name>
     <description>Backend API from Thales Hotel</description>
     <url/>
@@ -35,7 +35,6 @@
     
     <properties>
         <java.version>21</java.version>
-        <spring-ai.version>1.0.0-M7</spring-ai.version>
     </properties>
     
     <dependencies>
@@ -58,10 +57,6 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-database-postgresql</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.ai</groupId>
-            <artifactId>spring-ai-starter-vector-store-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.session</groupId>
@@ -95,20 +90,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
-    
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.ai</groupId>
-                <artifactId>spring-ai-bom</artifactId>
-                <version>${spring-ai.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
     
     <build>
         <plugins>
@@ -131,15 +117,6 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
             </plugin>
         </plugins>
         <finalName>Thales-Hotel</finalName>
